--- a/mycareApp/www/nurse_data_calendar.html
+++ b/mycareApp/www/nurse_data_calendar.html
@@ -175,8 +175,8 @@
                             <!-- <div class="user_pic"></div> -->
                             <h1 class="neo_bold please_create">Edit your Profile</h1>
                             <div class="user_profile">
-                                <img src="images/profile_pic.png" class="profile_pic user_image" />
-                                <img src="images/cam.png" class="edit_pic" />
+                                <img src="images/profile_pic.png" class="profile_pic user_image" id="user_image" />
+                                <img src="images/cam.png" class="edit_pic choose_profile_photo" />
                             </div>
 
                             <div class="profile_inputs">
